# modern-auth-service

./: Cargo.toml  README.md
.cargo/: config.toml
endpoints/: Google  Microsoft
linux/: install.sh  remote-install.sh
linux/systemd/: modern-auth-service.service
src/: http_client.rs  interface.rs  logger.rs  main.rs  oauth2.rs  openid.rs  shared_object.rs  task_manager.rs
src/http_client/: curl.rs  reqwest.rs
src/interface/: curl.rs  mock.rs  production.rs
src/oauth2/: device_code_flow.rs  error.rs  provider.rs  token_keeper.rs
src/oauth2/tests/: login.rs
