[package]
name = "modern-auth-service"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-curl = "0.3"
async-trait = "0.1"
chrono = "0.4"
curl-http-client = "1.0"
derive-deref-rs = "0.1"
directories = "5.0"
fern = "0.6"
http = "0.2"
json-elem = "0.1.1"
log = "0.4"
oauth2 = "4.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
tokio = { version = "1.36", features = ["rt"] }

# My dependencies
ipc-server = {git = "https://github.com/LorenzoLeonardo/ipc-server.git", branch = "master"}

[dev-dependencies]
tempfile = "3.10"
